[package]
name = "arduino-esp32-cloud-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
socketioxide = "0.16.2"
rmpv = "1.3.0"